# indielib-game

./: .cproject  .gitignore  .project  CMakeLists.txt
Game/: CMakeLists.txt  Game.vcproj  Player.cpp  Player.h  Spriter.cpp  Spriter.h  main.cpp
Game/resources/: SamusStillCollision.xml
Game/resources/animations/: samus.xml  samus_past.xml
Game/resources/animations/samus/: samus_2_collisions.xml  samus_3_collisions.xml  samus_7_collisions.xml
Game/resources/animations/samus_past/: samus_1_collisions.xml  samus_8_collisions.xml
IndieLib/: CMakeLists.txt
IndieLib/common/dependencies/: CMakeLists.txt  sdl_removed_files.sh
IndieLib/common/dependencies/FreeImage/: CMakeLists.txt  FreeImage.2008.sln
IndieLib/common/dependencies/FreeImage/Source/FreeImage/: PluginBMP.cpp
IndieLib/common/dependencies/FreeImage/Source/LibJPEG/: CMakeLists.txt
IndieLib/common/dependencies/FreeImage/Source/LibOpenJPEG/: CMakeLists.txt
IndieLib/common/dependencies/FreeImage/Source/LibPNG/: CMakeLists.txt
IndieLib/common/dependencies/FreeImage/Source/LibRawLite/: CMakeLists.txt
IndieLib/common/dependencies/FreeImage/Source/LibRawLite/src/: libraw_datastream.cpp
IndieLib/common/dependencies/FreeImage/Source/LibTIFF4/: CMakeLists.txt
IndieLib/common/dependencies/FreeImage/Source/OpenEXR/: CMakeLists.txt
IndieLib/common/dependencies/FreeImage/Source/ZLib/: CMakeLists.txt
IndieLib/common/dependencies/SDL-2.0/: CMakeLists.txt
IndieLib/common/dependencies/SDL-2.0/VisualC/SDL/: SDL_VS2008.vcproj
IndieLib/common/dependencies/SDL-2.0/include/: SDL_config_linux.h
IndieLib/common/dependencies/SDL-2.0/src/audio/directsound/: directx.h
IndieLib/common/dependencies/SDL-2.0/src/audio/xaudio2/: SDL_xaudio2.c
IndieLib/common/dependencies/glew-1.9.0/: CMakeLists.txt
IndieLib/common/dependencies/tinyxml/: CMakeLists.txt
IndieLib/common/include/: Defines.h
IndieLib/common/src/: IND_Camera3d.cpp  IND_LightManager.cpp
IndieLib/common/src/render/directx/: XMeshHierarchy.cpp
IndieLib/linux/: indielib-game Linux Debug.launch  indielib-game Linux Release.launch  install_deps.sh
IndieLib/win/: IndieLib.sln  IndieLib_vc2008.vcproj  indielib-game Windows Debug.launch  indielib-game Windows Release.launch
