FILE(GLOB SOURCE_FILES
tif_*
)

list(REMOVE_ITEM SOURCE_FILES ${CMAKE_CURRENT_LIST_DIR}/tif_wince.c)
list(REMOVE_ITEM SOURCE_FILES ${CMAKE_CURRENT_LIST_DIR}/tif_unix.c)
list(REMOVE_ITEM SOURCE_FILES ${CMAKE_CURRENT_LIST_DIR}/tif_vms.c)

if(NOT WIN32)
list(REMOVE_ITEM SOURCE_FILES ${CMAKE_CURRENT_LIST_DIR}/tif_win32.c)
endif()

add_library(tiff4 STATIC ${SOURCE_FILES})
